More progress towards rendering the items

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.ejs": "html",
         "raylib.h": "c",
-        "iosfwd": "c"
+        "iosfwd": "c",
+        "stdint.h": "c"
     }
 }
